# smart-chatbot

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
smartbot/: README.md  main.py  pyproject.toml
smartbot/src/smartbot/core/: agent.py  interfaces.py
smartbot/src/smartbot/memory/: base.py  in_memory.py  json_memory.py  models.py
smartbot/src/smartbot/providers/: base.py  echo_provider.py  local_provider.py  models.py  openai_provider.py
smartbot/src/smartbot/utils/: config_loader.py  logger.py
smartbot/tests/: test_agent.py  test_memory.py  test_yaml_loader.py
smartbot/tests/smartbot/core/: test_interfaces.py
smartbot/tests/smartbot/providers/: test_providers.py
smartbot/tests/smartbot/utils/: test_yaml_loader.py
src/smartbot/core/: agent.py  interfaces.py
src/smartbot/memory/: __init__.py  in_memory.py  json_memory.py  models.py
src/smartbot/providers/: base.py  echo_provider.py  local_provider.py  models.py  openai_provider.py
src/smartbot/utils/: config_loader.py  logger.py  yaml_loader.py
tests/smartbot/core/: test_agent.py  test_interfaces.py
tests/smartbot/memory/: test_memory.py
tests/smartbot/providers/: test_models.py  test_providers.py
tests/smartbot/utils/: test_config_loader.py  test_logger.py  test_yaml_loader.py
